<resources>
    <string name="app_name">OnlineShop</string>
    <string name="shopping_online">Shopping Online</string>
    <string name="intro_desc">The store of your dream.You will find everything that youneed here.</string>
    <string name="btnStart">Start Shopping</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="best_seller_products">Best Seller Products</string>
    <string name="see_all">See All</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
    <string name="explore">Explore</string>
    <string name="spring_sale">Spring sale</string>
    <string name="save_up_to_30_non_sale_sneakers">Save up to 30$\non sale Sneakers</string>
    <string name="select_size">Select Size</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="apply">Apply</string>
    <string name="enter_your_cupoun">Enter Your cupoun</string>
    <string name="subtotal">Subtotal</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don´t have an account?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="sign_now">Sign In</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="profile_title">Profile</string>
</resources>