<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/redOrange"
    tools:context=".activity.IntroActivity">

  <ImageView
      android:id="@+id/img_logo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_llogo"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="120dp"/>

  <TextView
      android:id="@+id/tv_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
    android:text="@string/shopping_online"
      android:fontFamily="@font/poppins_semibold"
      app:layout_constraintTop_toBottomOf="@id/img_logo"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:textColor="@color/white"
      android:layout_marginTop="16dp"
      android:textSize="18sp"/>


  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
    android:text="@string/intro_desc"
    android:fontFamily="@font/poppins"
      android:textColor="@color/white"
      android:layout_marginTop="80dp"
      android:textSize="18sp"
      app:layout_constraintTop_toBottomOf="@id/tv_title"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:gravity="center"/>


  <com.google.android.material.button.MaterialButton
      android:id="@+id/btn_start"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/white"
      android:fontFamily="@font/poppins_semibold"
      android:text="@string/btnStart"
      android:textColor="@color/redOrange"
      app:cornerRadius="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_margin="24dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>